# cyber-agent

./: .env.example  .gitignore  CODE_FIXES_SUMMARY.md  CODE_QUALITY_REPORT.md  FIXES_APPLIED.md  INSTALL_LINUX.md  INTERACTIVE_MENU_CHANGES.md  INTERACTIVE_SETUP_GUIDE.md  MODE_SWITCHING_FIXES.md  README.md  RULES_OF_ENGAGEMENT.md  RULES_OF_ENGAGEMENT.md.template  SETUP_GUIDE.md  UI_UX_IMPROVEMENTS.md  config.yaml  config.yaml.example  install.sh  pyproject.toml  uninstall.sh
agent/: __init__.py  agent.py  audit.py  authorization.py  modes.py  provider.py
agent/memory/: __init__.py  episodic.py  experience.py  procedural.py  semantic.py  working.py  world.py
agent/tools/: __init__.py  approval.py  codeexec.py  fileops.py  memory_ops.py  offensive.py  planning.py  recon.py  registry.py  reporting.py  search.py  web.py
cli/: main.py
cyber_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
data/: agent.db
data/procedures/: full_engagement.yaml  network_enum_nmap.yaml  web_app_recon.yaml
data/semantic_seed/: cwe_attack_seed.json
scripts/: setup.py
surfaces/: __init__.py  discord_bot.py  telegram_bot.py
tests/: test_smoke.py
