[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cyber-agent"
version = "0.1.0"
description = "Autonomous offensive cybersecurity agent for authorized bug bounty, red team, and penetration testing engagements."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "You"}]
keywords = ["security", "pentest", "redteam", "bugbounty", "agent", "llm"]

dependencies = [
    "openai>=1.50.0",
    "anthropic>=0.39.0",
    "httpx>=0.27.0",
    "typer>=0.12.5",
    "rich>=13.9.0",
    "pyyaml>=6.0.2",
    "networkx>=3.3",
    "python-dotenv>=1.0.1",
    "pydantic>=2.9.0",
]

[project.optional-dependencies]
telegram = ["python-telegram-bot>=21.6"]
discord  = ["discord.py>=2.4.0"]
all      = ["python-telegram-bot>=21.6", "discord.py>=2.4.0"]
dev      = ["pytest>=8.3.0", "pytest-asyncio>=0.24.0"]

[project.scripts]
cyber-agent = "cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent*", "surfaces*", "cli*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
